--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </head>
 <body class="bg-gray-50 font-sans overflow-x-hidden">
     <!-- Navigation -->
-    <nav class="fixed top-0 left-0 right-0 z-50 glass-effect text-white transition-all duration-300">
+    <nav class="fixed top-0 left-0 right-0 z-50 glass-effect text-white transition-all duration-300 bg-[#1B387D]">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
