--- a/index.html
+++ b/index.html
@@ -221,28 +221,27 @@
     </section>
 
     <!-- Stats Section -->
-    <section class="py-16 px-4 bg-gradient-to-r from-blue-50 to-cyan-50">
-        <div class="max-w-7xl mx-auto">
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
-                <div class="card-hover bg-white rounded-xl p-6 shadow-lg">
-                    <div class="stats-counter" data-target="19">0</div>
-                    <p class="text-gray-600 font-medium">साल का अनुभव</p>
-                </div>
-                <div class="card-hover bg-white rounded-xl p-6 shadow-lg">
-                    <div class="stats-counter" data-target="5000">0</div>
-                    <p class="text-gray-600 font-medium">खुश ग्राहक</p>
-                </div>
-                <div class="card-hover bg-white rounded-xl p-6 shadow-lg">
-                    <div class="stats-counter" data-target="50">0</div>
-                    <p class="text-gray-600 font-medium">विभिन्न ब्रांड</p>
-                </div>
-                <div class="card-hover bg-white rounded-xl p-6 shadow-lg">
-                    <div class="stats-counter" data-target="24">0</div>
-                    <p class="text-gray-600 font-medium">घंटे सेवा</p>
-                </div>
-            </div>
+    <section class="py-16 px-4">
+        <div class="grid md:grid-cols-4 gap-4 mb-8 grid-cols-2">
+          <div class="text-center p-6 bg-white shadow-md rounded-lg">
+            <div class="text-2xl font-bold text-blue-600">19+</div>
+            <div class="text-sm text-gray-600">साल अनुभव</div>
+          </div>
+          <div class="text-center p-6 bg-white shadow-md rounded-lg">
+            <div class="text-2xl font-bold text-green-600">5000+</div>
+            <div class="text-sm text-gray-600">खुश ग्राहक</div>
+          </div>
+          <div class="text-center p-6 bg-white shadow-md rounded-lg">
+            <div class="text-2xl font-bold text-purple-600">50+</div>
+            <div class="text-sm text-gray-600">वाहन ब्रांड</div>
+          </div>
+          <div class="text-center p-6 bg-white shadow-md rounded-lg">
+            <div class="text-2xl font-bold text-orange-600">24/7</div>
+            <div class="text-sm text-gray-600">सहायता</div>
+          </div>
         </div>
-    </section>
+      </section>
+      
 
     <!-- Introduction Section -->
     <section class="py-20 px-4 bg-white">
